Fix up TrueNAS Support contact and Dark mode color for nav

--- a/static/custom.css
+++ b/static/custom.css
@@ -2441,8 +2441,7 @@ pre.gdoc-mermaid.mermaid.mermaid_sizing {
 @media (prefers-color-scheme: dark) {
   :root {
     --enterprise-title: rgb(52, 58, 64); /* Define --enterprise-title for devices preferring dark mode */
-	--body-font-color: #f0f3f5;
-  }
+}
 }
 @media (prefers-color-scheme: light) {
   :root {
@@ -2752,21 +2751,26 @@ pre.gdoc-mermaid.mermaid.mermaid_sizing {
 	padding: 20px 0;
 	font-size: 18px;
 	font-weight: bold;
-	color: #555;
+	color: var(--body-font-color);
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 	transition: 0.3s;
 	background-color: rgb(248, 249, 250);
     border-radius: 15px;
 }
+@media (prefers-color-scheme: dark) {
+	.apps-catalogs > a {
+		background-color: #475d6b;
+	}
+}
 .apps-catalogs > a:hover {
-	color: #0095d5;
+	color: var(--body-font-color);
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 .apps-catalogs > a:visited {
-	color: #555;
+	color: var(--body-font-color);
 }
 .apps-catalogs > a:visited:hover {
-	color: #0095d5;
+	color: var(--body-font-color);
 }
 .apps-catalogs > a > img {
 	width: 50px;
